zig/mlir-parser/src/parser.zig
//! MLIR Parser
//! Implements a recursive descent parser following the grammar in grammar.ebnf
//! Each parsing function is annotated with the corresponding grammar rule

const std = @import("std");
const lexer = @import("lexer.zig");
const ast = @import("ast.zig");

const Lexer = lexer.Lexer;
const Token = lexer.Token;
const TokenType = lexer.TokenType;

pub const ParseError = error{
    UnexpectedToken,
    ExpectedToken,
    OutOfMemory,
    InvalidType,
    InvalidOperation,
    InvalidAttribute,
    Overflow,
    InvalidCharacter,
    UnexpectedEndOfFile,
};

pub const Parser = struct {
    lexer: *Lexer,
    allocator: std.mem.Allocator,
    current: Token,
    previous: Token,

    pub fn init(allocator: std.mem.Allocator, lex: *Lexer) !Parser {
        var parser = Parser{
            .lexer = lex,
            .allocator = allocator,
            .current = undefined,
            .previous = undefined,
        };
        // Prime the parser with the first token
        parser.current = lex.nextToken();
        parser.previous = parser.current;
        return parser;
    }

    pub fn deinit(self: *Parser) void {
        _ = self;
    }

    // Helper methods for parser navigation

    /// Returns the current token without advancing
    fn peek(self: *Parser) Token {
        return self.current;
    }

    /// Returns the previous token
    fn peekPrevious(self: *Parser) Token {
        return self.previous;
    }

    /// Advances to the next token and returns the previous one
    fn advance(self: *Parser) Token {
        self.previous = self.current;
        self.current = self.lexer.nextToken();
        return self.previous;
    }

    /// Checks if current token is of given type without consuming
    fn check(self: *Parser, token_type: TokenType) bool {
        return self.current.type == token_type;
    }

    /// Consumes current token if it matches the given type
    fn match(self: *Parser, token_types: []const TokenType) bool {
        for (token_types) |token_type| {
            if (self.check(token_type)) {
                _ = self.advance();
                return true;
            }
        }
        return false;
    }

    /// Consumes current token if it matches, otherwise returns error
    fn expect(self: *Parser, token_type: TokenType) !Token {
        if (self.check(token_type)) {
            return self.advance();
        }
        std.debug.print("Expected {s}, but got {s} at line {}, column {}\n", .{
            @tagName(token_type),
            @tagName(self.current.type),
            self.current.line,
            self.current.column,
        });
        return ParseError.ExpectedToken;
    }

    /// Checks if we're at the end of input
    fn isAtEnd(self: *Parser) bool {
        return self.current.type == .eof;
    }

    /// Reports an error at the current token
    fn reportError(self: *Parser, message: []const u8) void {
        std.debug.print("Parse error at line {}, column {}: {s}\n", .{
            self.current.line,
            self.current.column,
            message,
        });
    }

    // Grammar: toplevel ::= (operation | attribute-alias-def | type-alias-def)*
    pub fn parseModule(self: *Parser) !ast.Module {
        var operations: std.ArrayList(ast.Operation) = .empty;
        errdefer operations.deinit(self.allocator);

        var type_aliases: std.ArrayList(ast.TypeAliasDef) = .empty;
        errdefer type_aliases.deinit(self.allocator);

        var attribute_aliases: std.ArrayList(ast.AttributeAliasDef) = .empty;
        errdefer attribute_aliases.deinit(self.allocator);

        while (!self.isAtEnd()) {
            // Check for type alias definition: !alias_name = type
            if (self.check(.type_alias_id)) {
                // Peek ahead to see if there's an '=' after the alias name
                const next_token = self.peekNext();
                if (next_token.type == .equal) {
                    try type_aliases.append(self.allocator, try self.parseTypeAliasDef());
                    continue;
                }
            }
            // Check for attribute alias definition: #alias_name = attr
            if (self.check(.attribute_alias_id)) {
                const next_token = self.peekNext();
                if (next_token.type == .equal) {
                    try attribute_aliases.append(self.allocator, try self.parseAttributeAliasDef());
                    continue;
                }
            }
            // Otherwise, parse as operation
            try operations.append(self.allocator, try self.parseOperation());
        }

        return ast.Module{
            .operations = try operations.toOwnedSlice(self.allocator),
            .type_aliases = try type_aliases.toOwnedSlice(self.allocator),
            .attribute_aliases = try attribute_aliases.toOwnedSlice(self.allocator),
            .allocator = self.allocator,
        };
    }

    fn peekNext(self: *Parser) Token {
        // We need to look ahead to see the next token after current
        // Save the lexer state
        const saved_start = self.lexer.start;
        const saved_current = self.lexer.current;
        const saved_line = self.lexer.line;
        const saved_column = self.lexer.column;

        // Get the next token (this advances the lexer)
        const next_token = self.lexer.nextToken();

        // Restore lexer state
        self.lexer.start = saved_start;
        self.lexer.current = saved_current;
        self.lexer.line = saved_line;
        self.lexer.column = saved_column;

        return next_token;
    }

    // Grammar: operation ::= op-result-list? (generic-operation | custom-operation) trailing-location?
    // NOTE: We only parse generic operations (output from mlir-opt -mlir-print-op-generic)
    pub fn parseOperation(self: *Parser) ParseError!ast.Operation {
        // Check for op-result-list
        // In generic format, operations either start with:
        //   - value-id(s) followed by `=` (has results)
        //   - string-literal (no results)
        var results: ?ast.OpResultList = null;

        // Simple check: if we see value-id, it must be a result binding
        // because generic operations always start with quoted strings like "arith.constant"
        if (self.check(.value_id)) {
            results = try self.parseOpResultList();
        }

        // Parse the operation itself (generic format always uses string literal)
        if (!self.check(.string_literal)) {
            self.reportError("Expected generic operation (string literal). Use mlir-opt -mlir-print-op-generic to convert input.");
            return ParseError.InvalidOperation;
        }

        const generic_op = try self.parseGenericOperation();

        // Check for trailing location
        var location: ?ast.Location = null;
        if (self.match(&.{.kw_loc})) {
            location = try self.parseLocation();
        }

        return ast.Operation{
            .results = results,
            .kind = .{ .generic = generic_op },
            .location = location,
        };
    }

    // Grammar: op-result-list ::= op-result (`,` op-result)* `=`
    fn parseOpResultList(self: *Parser) !ast.OpResultList {
        var results: std.ArrayList(ast.OpResult) = .empty;
        errdefer results.deinit(self.allocator);

        while (true) {
            try results.append(self.allocator, try self.parseOpResult());
            if (!self.match(&.{.comma})) break;
        }

        _ = try self.expect(.equal);

        return ast.OpResultList{
            .results = try results.toOwnedSlice(self.allocator),
        };
    }

    // Grammar: op-result ::= value-id (`:` integer-literal)?
    fn parseOpResult(self: *Parser) !ast.OpResult {
        const value_id = try self.expect(.value_id);

        var num_results: ?u64 = null;
        if (self.match(&.{.colon})) {
            const num_token = try self.expect(.integer_literal);
            num_results = try std.fmt.parseInt(u64, num_token.lexeme, 10);
        }

        return ast.OpResult{
            .value_id = value_id.lexeme,
            .num_results = num_results,
        };
    }

    // Grammar: generic-operation ::= string-literal `(` value-use-list? `)` successor-list?
    //                                 dictionary-properties? region-list? dictionary-attribute?
    //                                 `:` function-type
    fn parseGenericOperation(self: *Parser) !ast.GenericOperation {
        const name_token = try self.expect(.string_literal);
        const name = name_token.lexeme[1..name_token.lexeme.len-1]; // Strip quotes

        _ = try self.expect(.lparen);

        // Parse value-use-list
        var operands: std.ArrayList(ast.ValueUse) = .empty;
        errdefer operands.deinit(self.allocator);

        if (!self.check(.rparen)) {
            try operands.append(self.allocator, try self.parseValueUse());
            while (self.match(&.{.comma})) {
                try operands.append(self.allocator, try self.parseValueUse());
            }
        }

        _ = try self.expect(.rparen);

        // Parse successor-list (optional)
        var successors: []ast.Successor = &[_]ast.Successor{};
        if (self.check(.lbracket)) {
            successors = try self.parseSuccessorList();
        }

        // Grammar: dictionary-properties ::= `<` dictionary-attribute `>`
        var properties: ?ast.DictionaryAttribute = null;
        if (self.check(.langle)) {
            _ = self.advance(); // consume <
            properties = try self.parseDictionaryAttribute();
            _ = try self.expect(.rangle);
        }

        // Parse region-list (optional)
        var regions: []ast.Region = &[_]ast.Region{};
        if (self.check(.lparen)) {
            regions = try self.parseRegionList();
        }

        // Grammar: dictionary-attribute ::= `{` (attribute-entry (`,` attribute-entry)*)? `}`
        var attributes: ?ast.DictionaryAttribute = null;
        if (self.check(.lbrace)) {
            attributes = try self.parseDictionaryAttribute();
        }

        _ = try self.expect(.colon);

        const function_type = try self.parseFunctionType();

        return ast.GenericOperation{
            .name = name,
            .operands = try operands.toOwnedSlice(self.allocator),
            .successors = successors,
            .properties = properties,
            .regions = regions,
            .attributes = attributes,
            .function_type = function_type,
        };
    }


    // Grammar: value-use ::= value-id (`#` decimal-literal)?
    fn parseValueUse(self: *Parser) !ast.ValueUse {
        const value_id = try self.expect(.value_id);

        var result_number: ?u64 = null;
        if (self.match(&.{.hash})) {
            const num_token = try self.expect(.integer_literal);
            result_number = try std.fmt.parseInt(u64, num_token.lexeme, 10);
        }

        return ast.ValueUse{
            .value_id = value_id.lexeme,
            .result_number = result_number,
        };
    }

    // Grammar: successor-list ::= `[` successor (`,` successor)* `]`
    fn parseSuccessorList(self: *Parser) ![]ast.Successor {
        _ = try self.expect(.lbracket);

        var successors: std.ArrayList(ast.Successor) = .empty;
        errdefer successors.deinit(self.allocator);

        if (!self.check(.rbracket)) {
            try successors.append(self.allocator, try self.parseSuccessor());
            while (self.match(&.{.comma})) {
                try successors.append(self.allocator, try self.parseSuccessor());
            }
        }

        _ = try self.expect(.rbracket);

        return try successors.toOwnedSlice(self.allocator);
    }

    // Grammar: successor ::= caret-id (`:` block-arg-list)?
    // NOTE: In practice, block-arg-list can appear with or without the `:` separator
    fn parseSuccessor(self: *Parser) !ast.Successor {
        const caret_id = try self.expect(.caret_id);

        var args: ?ast.BlockArgList = null;
        // Check for optional colon (may be omitted)
        _ = self.match(&.{.colon});
        // Check for block arg list
        if (self.check(.lparen)) {
            args = try self.parseBlockArgList();
        }

        return ast.Successor{
            .block_id = caret_id.lexeme,
            .args = args,
        };
    }

    // Grammar: block-arg-list ::= `(` value-id-and-type-list? `)`
    fn parseBlockArgList(self: *Parser) !ast.BlockArgList {
        _ = try self.expect(.lparen);

        var args: std.ArrayList(ast.ValueIdAndType) = .empty;
        errdefer args.deinit(self.allocator);

        if (!self.check(.rparen)) {
            try args.append(self.allocator, try self.parseValueIdAndType());
            while (self.match(&.{.comma})) {
                try args.append(self.allocator, try self.parseValueIdAndType());
            }
        }

        _ = try self.expect(.rparen);

        return ast.BlockArgList{
            .args = try args.toOwnedSlice(self.allocator),
        };
    }

    // Grammar: value-id-and-type ::= value-id `:` type
    fn parseValueIdAndType(self: *Parser) !ast.ValueIdAndType {
        const value_id = try self.expect(.value_id);
        _ = try self.expect(.colon);
        const typ = try self.parseType();

        return ast.ValueIdAndType{
            .value_id = value_id.lexeme,
            .type = typ,
        };
    }

    // Grammar: region-list ::= `(` region (`,` region)* `)`
    fn parseRegionList(self: *Parser) ![]ast.Region {
        _ = try self.expect(.lparen);

        var regions: std.ArrayList(ast.Region) = .empty;
        errdefer {
            for (regions.items) |*region| {
                region.deinit(self.allocator);
            }
            regions.deinit(self.allocator);
        }

        if (!self.check(.rparen)) {
            try regions.append(self.allocator, try self.parseRegion());
            while (self.match(&.{.comma})) {
                try regions.append(self.allocator, try self.parseRegion());
            }
        }

        _ = try self.expect(.rparen);

        return try regions.toOwnedSlice(self.allocator);
    }

    // Grammar: region ::= `{` entry-block? block* `}`
    // Grammar: entry-block ::= operation+
    fn parseRegion(self: *Parser) ParseError!ast.Region {
        _ = try self.expect(.lbrace);

        var entry_block: ?[]ast.Operation = null;
        var blocks: std.ArrayList(ast.Block) = .empty;
        errdefer {
            if (entry_block) |ops| {
                for (ops) |*op| {
                    op.deinit(self.allocator);
                }
                self.allocator.free(ops);
            }
            for (blocks.items) |*blk| {
                blk.deinit(self.allocator);
            }
            blocks.deinit(self.allocator);
        }

        // Parse entry-block or blocks
        // Entry blocks start with operations (not block labels)
        // Blocks start with block labels (caret-id)
        while (!self.check(.rbrace)) {
            if (self.check(.caret_id)) {
                // This is a labeled block
                try blocks.append(self.allocator, try self.parseBlock());
            } else {
                // This is part of the entry block
                if (entry_block == null) {
                    var ops: std.ArrayList(ast.Operation) = .empty;
                    errdefer {
                        for (ops.items) |*op| {
                            op.deinit(self.allocator);
                        }
                        ops.deinit(self.allocator);
                    }

                    // Parse operations until we hit a block label or closing brace
                    while (!self.check(.rbrace) and !self.check(.caret_id)) {
                        try ops.append(self.allocator, try self.parseOperation());
                    }

                    entry_block = try ops.toOwnedSlice(self.allocator);
                } else {
                    self.reportError("Unexpected operation after entry block");
                    return ParseError.InvalidOperation;
                }
            }
        }

        _ = try self.expect(.rbrace);

        return ast.Region{
            .entry_block = entry_block,
            .blocks = try blocks.toOwnedSlice(self.allocator),
        };
    }

    // Grammar: block ::= block-label operation+
    // Grammar: block-label ::= block-id block-arg-list? `:`
    fn parseBlock(self: *Parser) ParseError!ast.Block {
        const label = try self.parseBlockLabel();

        var operations: std.ArrayList(ast.Operation) = .empty;
        errdefer {
            for (operations.items) |*op| {
                op.deinit(self.allocator);
            }
            operations.deinit(self.allocator);
        }

        // Parse operations until we hit a block label or closing brace
        while (!self.check(.rbrace) and !self.check(.caret_id)) {
            try operations.append(self.allocator, try self.parseOperation());
        }

        return ast.Block{
            .label = label,
            .operations = try operations.toOwnedSlice(self.allocator),
        };
    }

    // Grammar: block-label ::= block-id block-arg-list? `:`
    fn parseBlockLabel(self: *Parser) !ast.BlockLabel {
        const caret_id = try self.expect(.caret_id);

        var args: ?ast.BlockArgList = null;
        if (self.check(.lparen)) {
            args = try self.parseBlockArgList();
        }

        _ = try self.expect(.colon);

        return ast.BlockLabel{
            .block_id = caret_id.lexeme,
            .args = args,
        };
    }

    // Grammar: dictionary-attribute ::= `{` (attribute-entry (`,` attribute-entry)*)? `}`
    fn parseDictionaryAttribute(self: *Parser) !ast.DictionaryAttribute {
        _ = try self.expect(.lbrace);

        var entries: std.ArrayList(ast.AttributeEntry) = .empty;
        errdefer entries.deinit(self.allocator);

        if (!self.check(.rbrace)) {
            try entries.append(self.allocator, try self.parseAttributeEntry());
            while (self.match(&.{.comma})) {
                try entries.append(self.allocator, try self.parseAttributeEntry());
            }
        }

        _ = try self.expect(.rbrace);

        return ast.DictionaryAttribute{
            .entries = try entries.toOwnedSlice(self.allocator),
        };
    }

    // Grammar: attribute-entry ::= (bare-id | string-literal) (`=` attribute-value)?
    fn parseAttributeEntry(self: *Parser) !ast.AttributeEntry {
        const name_token = if (self.check(.bare_id))
            try self.expect(.bare_id)
        else
            try self.expect(.string_literal);

        // Check if this is a unit attribute (no '=' follows)
        if (!self.check(.equal)) {
            // Unit attribute: just a bare identifier
            return ast.AttributeEntry{
                .name = name_token.lexeme,
                .value = null,
            };
        }

        _ = try self.expect(.equal);

        // Parse the attribute value properly
        const attr_value = try self.parseAttributeEntryValue();

        return ast.AttributeEntry{
            .name = name_token.lexeme,
            .value = attr_value,
        };
    }

    // Grammar: attribute-value ::= attribute-alias | dialect-attribute | builtin-attribute
    // Note: This is for parsing values inside dictionary entries
    fn parseAttributeEntryValue(self: *Parser) ParseError!ast.AttributeValue {
        // Check for array: [...]
        if (self.check(.lbracket)) {
            return try self.parseArrayAttribute();
        }

        // Check for dictionary: {...}
        if (self.check(.lbrace)) {
            return try self.parseNestedDictionaryAttribute();
        }

        // Check for dialect attribute: #namespace...
        if (self.check(.attribute_alias_id) or self.check(.hash)) {
            // Capture as raw string for now
            const start_pos = self.current.lexeme.ptr - self.lexer.source.ptr;
            var depth: usize = 0;

            while (!self.isAtEnd()) {
                if (self.check(.lbrace) or self.check(.lbracket) or self.check(.lparen) or self.check(.langle)) {
                    depth += 1;
                    _ = self.advance();
                } else if (self.check(.rbrace) or self.check(.rbracket) or self.check(.rparen) or self.check(.rangle)) {
                    if (depth == 0) break;
                    depth -= 1;
                    _ = self.advance();
                } else if (self.check(.comma) and depth == 0) {
                    break;
                } else {
                    _ = self.advance();
                }
            }

            const end_pos = self.previous.lexeme.ptr - self.lexer.source.ptr + self.previous.lexeme.len;
            const raw_value = self.lexer.source[start_pos..end_pos];
            return ast.AttributeValue{ .builtin = .{ .string = raw_value } };
        }

        // Otherwise, capture as raw string (typed literals, strings, etc.)
        const start_pos = self.current.lexeme.ptr - self.lexer.source.ptr;
        var depth: usize = 0;

        while (!self.isAtEnd()) {
            if (self.check(.lbrace) or self.check(.lbracket) or self.check(.lparen) or self.check(.langle)) {
                depth += 1;
                _ = self.advance();
            } else if (self.check(.rbrace) or self.check(.rbracket) or self.check(.rparen) or self.check(.rangle)) {
                if (depth == 0) break;
                depth -= 1;
                _ = self.advance();
            } else if (self.check(.comma) and depth == 0) {
                break;
            } else {
                _ = self.advance();
            }
        }

        const end_pos = self.previous.lexeme.ptr - self.lexer.source.ptr + self.previous.lexeme.len;
        const raw_value = self.lexer.source[start_pos..end_pos];
        return ast.AttributeValue{ .builtin = .{ .string = raw_value } };
    }

    // Parse array attribute: [..., ...]
    fn parseArrayAttribute(self: *Parser) ParseError!ast.AttributeValue {
        _ = try self.expect(.lbracket);

        var elements: std.ArrayList(ast.AttributeValue) = .empty;
        errdefer elements.deinit(self.allocator);

        while (!self.check(.rbracket) and !self.isAtEnd()) {
            // Recursively parse nested attribute values
            try elements.append(self.allocator, try self.parseAttributeEntryValue());

            if (self.check(.comma)) {
                _ = self.advance();
            }
        }

        _ = try self.expect(.rbracket);

        return ast.AttributeValue{
            .builtin = .{ .array = try elements.toOwnedSlice(self.allocator) },
        };
    }

    // Parse nested dictionary attribute: {key = value, ...}
    fn parseNestedDictionaryAttribute(self: *Parser) ParseError!ast.AttributeValue {
        _ = try self.expect(.lbrace);

        var entries: std.ArrayList(ast.AttributeEntry) = .empty;
        errdefer entries.deinit(self.allocator);

        while (!self.check(.rbrace) and !self.isAtEnd()) {
            try entries.append(self.allocator, try self.parseAttributeEntry());

            if (self.check(.comma)) {
                _ = self.advance();
            }
        }

        _ = try self.expect(.rbrace);

        return ast.AttributeValue{
            .builtin = .{ .dictionary = try entries.toOwnedSlice(self.allocator) },
        };
    }

    fn parseLocation(self: *Parser) !ast.Location {
        _ = try self.expect(.lparen);

        // Simplified: just capture the location string
        const start = self.current;
        var depth: usize = 1;
        while (depth > 0 and !self.isAtEnd()) {
            if (self.check(.lparen)) depth += 1;
            if (self.check(.rparen)) depth -= 1;
            _ = self.advance();
        }

        const source = self.lexer.source[start.lexeme.ptr - self.lexer.source.ptr..self.previous.lexeme.ptr - self.lexer.source.ptr];

        return ast.Location{
            .source = source,
        };
    }

    // Grammar: type-alias-def ::= `!` alias-name `=` type
    // Note: We capture type as an opaque string to handle all syntax forms
    fn parseTypeAliasDef(self: *Parser) !ast.TypeAliasDef {
        const alias_token = try self.expect(.type_alias_id);
        _ = try self.expect(.equal);

        // Capture everything after '=' until end of line as opaque string
        const start_pos = self.current.lexeme.ptr - self.lexer.source.ptr;

        // Consume at least one token
        if (self.isAtEnd()) {
            return ParseError.UnexpectedEndOfFile;
        }

        // Advance tokens until we hit another alias definition or operation
        while (true) {
            _ = self.advance();

            // Stop before next alias definition or operation
            if (self.isAtEnd() or
                self.check(.attribute_alias_id) or
                self.check(.type_alias_id) or
                self.check(.string_literal)) {
                break;
            }
        }

        const end_pos = self.previous.lexeme.ptr - self.lexer.source.ptr + self.previous.lexeme.len;
        const type_value = self.lexer.source[start_pos..end_pos];

        return ast.TypeAliasDef{
            .alias_name = alias_token.lexeme[1..], // Skip the '!' prefix
            .type_value = std.mem.trim(u8, type_value, " \t\r\n"),
        };
    }

    // Grammar: attribute-alias-def ::= `#` alias-name `=` attribute-value
    // Note: We capture attribute-value as an opaque string to handle all syntax forms
    // Attribute aliases consume until end of line (newline) or EOF
    fn parseAttributeAliasDef(self: *Parser) !ast.AttributeAliasDef {
        const alias_token = try self.expect(.attribute_alias_id);
        _ = try self.expect(.equal);

        // Capture everything after '=' until end of line as opaque string
        const start_pos = self.current.lexeme.ptr - self.lexer.source.ptr;

        // Consume at least one token
        if (self.isAtEnd()) {
            return ParseError.UnexpectedEndOfFile;
        }

        // Track the line we started on
        const start_line = self.current.line;

        // Advance tokens until we hit a newline (different line) or EOF
        // This allows attribute values to contain #, !, and other special characters
        while (true) {
            const current_line = self.current.line;

            // Stop if we've moved to a new line or reached EOF
            if (self.isAtEnd() or current_line > start_line) {
                break;
            }

            _ = self.advance();
        }

        const end_pos = self.previous.lexeme.ptr - self.lexer.source.ptr + self.previous.lexeme.len;
        const attr_value = self.lexer.source[start_pos..end_pos];

        return ast.AttributeAliasDef{
            .alias_name = alias_token.lexeme[1..], // Skip the '#' prefix
            .attr_value = std.mem.trim(u8, attr_value, " \t\r\n"),
        };
    }

    // Grammar: type ::= type-alias | dialect-type | builtin-type
    // NOTE: function-type is parsed separately in operation contexts
    pub fn parseType(self: *Parser) ParseError!ast.Type {
        // Check for type-alias or dialect-type starting with '!'
        if (self.check(.type_alias_id)) {
            const token = self.peek();
            _ = self.advance(); // consume the type_alias_id token

            // Check what follows to determine type
            if (self.check(.langle)) {
                // Opaque dialect type with body: !llvm<...>
                const start = self.current;
                _ = self.advance(); // consume '<'

                // Capture everything until matching '>'
                var depth: usize = 1;
                while (depth > 0 and !self.isAtEnd()) {
                    if (self.check(.langle)) depth += 1;
                    if (self.check(.rangle)) depth -= 1;
                    _ = self.advance();
                }

                const body = self.lexer.source[start.lexeme.ptr - self.lexer.source.ptr..self.previous.lexeme.ptr - self.lexer.source.ptr + self.previous.lexeme.len];
                return ast.Type{ .dialect = ast.DialectType{
                    .namespace = token.lexeme[1..], // Skip '!'
                    .body = body,
                }};
            } else if (std.mem.indexOfScalar(u8, token.lexeme, '.')) |_| {
                // Pretty dialect type: !llvm.ptr
                return ast.Type{ .dialect = ast.DialectType{
                    .namespace = token.lexeme[1..], // Skip '!'
                    .body = null,
                }};
            } else {
                // Type alias: !my_alias
                return ast.Type{ .type_alias = token.lexeme[1..] }; // Skip '!'
            }
        }

        // Check for dialect-type: !namespace.type or !namespace<...>
        if (self.check(.exclamation)) {
            return ast.Type{ .dialect = try self.parseDialectType() };
        }

        // Otherwise, parse builtin type
        return ast.Type{ .builtin = try self.parseBuiltinType() };
    }

    // Grammar: dialect-type ::= `!` (opaque-dialect-type | pretty-dialect-type)
    // Grammar: opaque-dialect-type ::= dialect-namespace dialect-type-body
    // Grammar: pretty-dialect-type ::= dialect-namespace `.` pretty-dialect-type-lead-ident dialect-type-body?
    // NOTE: The lexer includes '.' as part of bare_id, so "llvm.ptr" is a single token
    fn parseDialectType(self: *Parser) !ast.DialectType {
        _ = try self.expect(.exclamation);

        const namespace_token = try self.expect(.bare_id);
        var body: ?[]const u8 = null;

        // Check for optional dialect-type-body: <...>
        if (self.check(.langle)) {
            const start = self.current;
            _ = self.advance(); // consume '<'

            // Simplified: just capture everything until matching '>'
            var depth: usize = 1;
            while (depth > 0 and !self.isAtEnd()) {
                if (self.check(.langle)) depth += 1;
                if (self.check(.rangle)) depth -= 1;
                _ = self.advance();
            }

            body = self.lexer.source[start.lexeme.ptr - self.lexer.source.ptr..self.previous.lexeme.ptr - self.lexer.source.ptr + self.previous.lexeme.len];
        }

        return ast.DialectType{
            .namespace = namespace_token.lexeme,
            .body = body,
        };
    }

    // Grammar: integer-type ::= `i` [1-9][0-9]*
    // Grammar: float types, index, etc.
    fn parseBuiltinType(self: *Parser) !ast.BuiltinType {
        const token = self.peek();

        if (token.type != .bare_id) {
            self.reportError("Expected type identifier");
            return ParseError.InvalidType;
        }

        const type_name = token.lexeme;

        // Grammar: index-type ::= `index` (check this first before integer types)
        if (std.mem.eql(u8, type_name, "index")) {
            _ = self.advance();
            return ast.BuiltinType.index;
        }

        // Grammar: signless-integer-type ::= `i` [1-9][0-9]*
        // Grammar: signed-integer-type ::= `si` [1-9][0-9]*
        // Grammar: unsigned-integer-type ::= `ui` [1-9][0-9]*
        else if (type_name.len > 1 and type_name[0] == 'i' and std.ascii.isDigit(type_name[1])) {
            _ = self.advance();
            const width = try std.fmt.parseInt(u64, type_name[1..], 10);
            return ast.BuiltinType{
                .integer = .{
                    .signedness = .signless,
                    .width = width,
                },
            };
        } else if (type_name.len > 2 and std.mem.startsWith(u8, type_name, "si") and std.ascii.isDigit(type_name[2])) {
            _ = self.advance();
            const width = try std.fmt.parseInt(u64, type_name[2..], 10);
            return ast.BuiltinType{
                .integer = .{
                        .signedness = .signed,
                    .width = width,
                },
            };
        } else if (type_name.len > 2 and std.mem.startsWith(u8, type_name, "ui") and std.ascii.isDigit(type_name[2])) {
            _ = self.advance();
            const width = try std.fmt.parseInt(u64, type_name[2..], 10);
            return ast.BuiltinType{
                .integer = .{
                    .signedness = .unsigned,
                    .width = width,
                },
            };
        }

        // Grammar: float types: f16, f32, f64, etc.
        else if (std.mem.eql(u8, type_name, "f16")) {
            _ = self.advance();
            return ast.BuiltinType{ .float = .f16 };
        } else if (std.mem.eql(u8, type_name, "f32")) {
            _ = self.advance();
            return ast.BuiltinType{ .float = .f32 };
        } else if (std.mem.eql(u8, type_name, "f64")) {
            _ = self.advance();
            return ast.BuiltinType{ .float = .f64 };
        } else if (std.mem.eql(u8, type_name, "f80")) {
            _ = self.advance();
            return ast.BuiltinType{ .float = .f80 };
        } else if (std.mem.eql(u8, type_name, "f128")) {
            _ = self.advance();
            return ast.BuiltinType{ .float = .f128 };
        } else if (std.mem.eql(u8, type_name, "bf16")) {
            _ = self.advance();
            return ast.BuiltinType{ .float = .bf16 };
        } else if (std.mem.eql(u8, type_name, "tf32")) {
            _ = self.advance();
            return ast.BuiltinType{ .float = .tf32 };
        }

        // Grammar: none-type ::= `none`
        else if (std.mem.eql(u8, type_name, "none")) {
            _ = self.advance();
            return ast.BuiltinType.none;
        }

        // Grammar: tensor-type ::= `tensor` `<` dimension-list type (`,` encoding)? `>`
        else if (std.mem.eql(u8, type_name, "tensor")) {
            _ = self.advance();
            return ast.BuiltinType{ .tensor = try self.parseTensorType() };
        }

        // Grammar: memref-type ::= `memref` `<` dimension-list type (`,` layout-specification)? (`,` memory-space)? `>`
        else if (std.mem.eql(u8, type_name, "memref")) {
            _ = self.advance();
            return ast.BuiltinType{ .memref = try self.parseMemRefType() };
        }
